--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
           </a>
         </div>
         <nav id="nav" class="style__nav___FTJ6X style__nav___1wP3z grid__clear___lRjVw" [ngClass]="{'style__active___X6av_': isClickedVisible }">
-          <div class="style__burger___1S-dE" (click)="isClickedVisible = !isClickedVisible;">
+          <div class="style__burger___1S-dE" (click)="toggleMenu();">
             <span class="style__arrow___1Thm- style__menu___WNN0Z" >
                 <span class="style__arrowInner___2se4z"> 
                   <span class="style__line___Nt9qj style__first___1N2QW"></span>
@@ -23,10 +23,13 @@
           </div>
           <div class="style__navInner___3VQ6W">
             <ul>
-              <li class="style__pageActive___18OXS">
+              <li  [routerLinkActive]="['style__pageActive___18OXS']">
                  <a class="mdl-navigation__link" [routerLink]="['/home']">Home</a>
              </li>
-              <li class=""><a class="mdl-navigation__link" [routerLink]="['/about']">About</a></li>
+              <li [routerLinkActive]="['style__pageActive___18OXS']"><a class="mdl-navigation__link" [routerLink]="['/about']">About</a></li>
+              <li [routerLinkActive]="['style__pageActive___18OXS']"><a class="mdl-navigation__link" [routerLink]="['/skills']">My Skills</a></li>
+              <li [routerLinkActive]="['style__pageActive___18OXS']"><a class="mdl-navigation__link" [routerLink]="['/portfolio']">Portfolio</a></li>
+               <li [routerLinkActive]="['style__pageActive___18OXS']"><a class="mdl-navigation__link" [routerLink]="['/contact']">Contact</a></li>
             </ul>
           </div>
         </nav>
