--- a/src/app/component/skills/skills.html
+++ b/src/app/component/skills/skills.html
@@ -1,99 +1,35 @@
-<div id="root">
-    <div data-reactroot="">
-        <!-- react-empty: 2 -->
-        <div class="style__line___3uTI5 style__left___3IRnd"></div>
-        <div class="style__line___3uTI5 style__top___1Dz7m"></div>
-        <div class="style__line___3uTI5 style__right___3Xggs"></div>
-        <div class="style__line___3uTI5 style__bottom___3EVve"></div>
-       
-        <div style="height: 2730px;">
-            <div class="style__page___ZJiyd template-page">
-                <figure class="style__loaded___1DGoC style__vignette___2Ah3- style__fixed___3zjcA style__poster___2yJev" style="width: 1366px; height: 221.4px; opacity: 1; transform: translate3d(0px, 0px, 0px);">
-                    <div class="style__image___1zbYM" style="background-image: url(&quot;/api/cache/large___storage___db___portfolio___pages___02 - about___poster.jpg&quot;); opacity: 1; width: 1366px; height: 683px; top: -230px; left: 0px; transform: translate3d(0px, 0px, 0px) scale(1); background-size: 1366px 683px; filter: blur(0px);"><img src="/api/cache/large___storage___db___portfolio___pages___02 - about___poster.jpg"></div>
-                    <div class="style__gradient___1apzF"></div>
-                </figure>
-                <section class="main-wrapper style__main___1KuTD style__hasPoster___3P6NN">
-                    <div class="style__mainWrapper___2eAnb">
-                        <div class="style__mainWrapperInner___3c8iz">
-                            <!-- react-empty: 152 -->
-                            <div>
-                                <section class="grid__container___3goUT grid__shortContainer___2zTyv">
-                                    <div class="style__text___MsVYo">
-                                        <h1>About</h1>
-                                        <p>This is me:</p>
-                                        <p><img src="/api/cache/page___storage___db___portfolio___pages___02 - about___profile_kid.jpg" alt="Fabian Irsara"></p>
-                                        <p>
-                                            <!-- react-text: 161 -->Ok this WAS me some years ago.
-                                            <!-- /react-text -->
-                                            <br>
-                                            <!-- react-text: 163 -->I currently look more like this:
-                                            <!-- /react-text -->
-                                        </p>
-                                        <p><img src="/api/cache/page___storage___db___portfolio___pages___02 - about___dscf2526.jpg" alt="Fabian Irsara"></p>
-                                        <p>I grew up in a small town in Italy.</p>
-                                        <p>
-                                            <!-- react-text: 168 -->After I got my hands wet with pascal I soon discovered my passion for programming while hacking on some gnome2 powered GUI stuff using ruby back in 2006:
-                                            <!-- /react-text -->
-                                            <br><a href="http://ruby-gnome2.osdn.jp/hiki.cgi?FAIRmine">magic link</a></p>
-                                        <div>
-                                            <div class="columns three">
-                                                <img src="/api/cache/page___storage___db___portfolio___pages___02 - about___omgomgomg2.gif">
-                                                <img src="/api/cache/page___storage___db___portfolio___pages___02 - about___omgomgomg.gif">
-                                                <img src="/api/cache/page___storage___db___portfolio___pages___02 - about___wand.gif">
-                                            </div>
-                                        </div>
-                                        <p>
-                                            <!-- react-text: 173 -->Now i live in Austria working
-                                            <!-- /react-text -->
-                                            <br><strong>full time freelance</strong>
-                                            <!-- react-text: 176 -->as a
-                                            <!-- /react-text -->
-                                            <br><strong>Web Developer</strong>
-                                            <!-- react-text: 179 -->. In my spare time I like to
-                                            <!-- /react-text -->
-                                            <br>
-                                            <!-- react-text: 181 -->take pictures with my
-                                            <!-- /react-text --><strong>Fuji X-Pro2</strong>
-                                            <!-- react-text: 183 -->.
-                                            <!-- /react-text -->
-                                        </p>
-                                        <p>
-                                            <!-- react-text: 185 -->I enjoy building interactive,
-                                            <!-- /react-text -->
-                                            <br>
-                                            <!-- react-text: 187 -->effect heavy javascript
-                                            <!-- /react-text -->
-                                            <br>
-                                            <!-- react-text: 189 -->applications with an eye
-                                            <!-- /react-text -->
-                                            <br>
-                                            <!-- react-text: 191 -->on animated content.
-                                            <!-- /react-text -->
-                                        </p>
-                                        <p>
-                                            <!-- react-text: 193 -->If you fancy a chat feel free to contact me:
-                                            <!-- /react-text -->
-                                            <br><a href="mailto:info@fabianirsara.com?Subject=Cheers">info@fabianirsara.com</a></p>
-                                    </div>
-                                </section>
-                            </div>
-                            <footer class="style__footer___34BaK">
-                                <div class="grid__container___3goUT grid__shortContainer___2zTyv">
-                                    <nav class="style__links___282q6">
-                                        <ul>
-                                            <li><a target="_blank" href="http://github.com/firsara"><span class="style__linkText___1suf9" data-text="Github">Github</span></a></li>
-                                            <li><a target="_blank" href="http://codepen.io/firsara"><span class="style__linkText___1suf9" data-text="Codepen">Codepen</span></a></li>
-                                            <li><a target="_blank" href="http://500px.com/firsara"><span class="style__linkText___1suf9" data-text="500px">500px</span></a></li>
-                                            <li><a target="_blank" href="http://twitter.com/firsara"><span class="style__linkText___1suf9" data-text="Twitter">Twitter</span></a></li>
-                                            <li><a target="_blank" href="http://fabianirsara.com/blog"><span class="style__linkText___1suf9" data-text="Blog">Blog</span></a></li>
-                                        </ul>
-                                    </nav>
-                                </div>
-                            </footer>
-                        </div>
-                    </div>
-                </section>
-            </div>
-        </div>
-    </div>
-</div>
+<div id="about" class="page" style="top: 80px; display: block;"><div class="spacer"></div>
+		<div class="no-bg"></div>
+
+		<section class="column visible">
+			<h2>About</h2>
+			<div class="sep delay-5"></div>
+			<p class="info">I specialize in front-end development, and I mostly focus on simplicity,
+				ergonomics, responsive design, cross-browser compatibility and SEO-friendly code.
+				I am currently working as a freelancer in Washington, DC.
+			</p>
+			<div class="sep delay-7"></div>
+			<div class="clear"></div>
+
+			<div class="dials">
+				<div class="dial delay-1"><div></div></div>
+				<div class="dial delay-2"><div></div></div>
+				<div class="dial delay-3"><div></div></div>
+			</div>
+		</section>
+		<div class="clear"></div>
+		<section class="column visible">
+			<div class="sep delay-7 .delay(4)"></div>
+			<ul class="skills">
+			<li class="delay-8"><div><p>HTML5 <br>&amp;<br> CSS3</p></div></li>
+			<li class="delay-9"><div><p>jQuery, JS <br>&amp;<br> LESS</p></div></li>
+			<li class="delay-12"><div><p>Flash, AS <br>&amp;<br> Illustrator</p></div></li>
+			<li class="delay-13"><div><p>Photoshop <br>&amp;<br> 3DS Max</p></div></li>
+			<br class="break">
+			<li class="delay-10"><div><p>PHP <br>&amp;<br> MySQL</p></div></li>
+			<li class="delay-11"><div><p>Ajax, JSON, <br> XML, SOAP</p></div></li>
+			<li class="delay-14"><div><p>Bootstrap <br>&amp;<br> WordPress</p></div></li>
+			</ul>
+		</section>
+
+	</div>
