--- a/src/app/component/contact/contact.html
+++ b/src/app/component/contact/contact.html
@@ -1,107 +1,51 @@
 <div id="root">
-
-    <div data-reactroot="">
-      <!-- react-empty: 2 -->
-      <div class="style__line___3uTI5 style__left___3IRnd"></div>
-      <div class="style__line___3uTI5 style__top___1Dz7m"></div>
-      <div class="style__line___3uTI5 style__right___3Xggs"></div>
-      <div class="style__line___3uTI5 style__bottom___3EVve"></div>
-      
-    <div style="height: 962px;">
-      <div class="style__page___ZJiyd template-home">
-        <figure class="style__loaded___1DGoC style__fixed___3zjcA style__poster___2yJev" style="width: 1366px; height: 343px; opacity: 1; transform: translate3d(0px, 0px, 0px);">
-          <div class="style__image___1zbYM" style="background-image: url(&quot;api/cache/large___storage___db___portfolio___pages___01 - home___poster.jpg&quot;); opacity: 0.5; width: 1366px; height: 911px; top: -284px; left: 0px; transform: translate3d(0px, 0px, 0px) scale(1); background-size: 1366px 911px; filter: blur(0px);"><img src="api/cache/large___storage___db___portfolio___pages___01 - home___poster.jpg"></div>
-        </figure>
-        <section class="main-wrapper style__main___1KuTD style__hasPoster___3P6NN">
-          <div class="style__mainWrapper___2eAnb">
-            <div class="style__mainWrapperInner___3c8iz">
-              <section class="style__text___2xpXY grid__container___3goUT grid__shortContainer___2zTyv style__hasPoster___1dohe">
-                <h1 class="style__title___ALq8l"><span>Fabian Irsara</span></h1>
-                <h2 class="style__subtitle___2v2Dl"><span><span><span>Developer</span>
-                  <!-- react-text: 51 -->, &nbsp;
-                  <!-- /react-text --><span>Interactive</span>
-                  <!-- react-text: 53 -->, &nbsp;
-                  <!-- /react-text --><span>Italian</span></span>
-                  </span>
-                </h2>
-              </section>
-              <div>
-                <section class="grid__container___3goUT grid__shortContainer___2zTyv">
-                  <div class="style__text___MsVYo">
-                    <p><strong>Cheers</strong>
-                      <!-- react-text: 60 -->, I am Fabian,
-                      <!-- /react-text --><br><strong>Interactive Developer</strong>
-                      <!-- react-text: 63 -->,
-                      <!-- /react-text --><br><strong>jury member</strong>
-                      <!-- react-text: 66 -->at
-                      <!-- /react-text --><a href="http://awwwards.com">awwwards</a>
-                      <!-- react-text: 68 -->
-                      <!-- /react-text --><br>
-                      <!-- react-text: 70 -->and founder of
-                      <!-- /react-text --><a href="http://momate.at">Momate</a>
-                      <!-- react-text: 72 -->.
-                      <!-- /react-text -->
-                    </p>
-                    <p>
-                      <!-- react-text: 74 -->You are currently
-                      <!-- /react-text --><br>
-                      <!-- react-text: 76 -->looking at
-                      <!-- /react-text --><strong>my site</strong>
-                      <!-- react-text: 78 -->,
-                      <!-- /react-text --><br>
-                      <!-- react-text: 80 -->that
-                      <!-- /react-text -->
-                      <!-- react-text: 81 -->'
-                      <!-- /react-text -->
-                      <!-- react-text: 82 -->s awesome.
-                      <!-- /react-text -->
-                    </p>
-                    <p>
-                      <!-- react-text: 84 -->This site uses
-                      <!-- /react-text --><strong>React</strong>
-                      <!-- react-text: 86 -->
-                      <!-- /react-text -->
-                      <!-- react-text: 87 -->*
-                      <!-- /react-text -->
-                      <!-- react-text: 88 -->
-                      <!-- /react-text --><br>
-                      <!-- react-text: 90 -->and
-                      <!-- /react-text --><strong>Dropbox</strong>
-                      <!-- react-text: 92 -->as
-                      <!-- /react-text --><br>
-                      <!-- react-text: 94 -->a content manager.
-                      <!-- /react-text --><br><em><!-- react-text: 97 -->*<!-- /react-text --><!-- react-text: 98 --> redux, react router, babel, webpack,<!-- /react-text --><br><!-- react-text: 100 -->grunt, gsap, rucksack, autoprefixer,<!-- /react-text --><br><!-- react-text: 102 -->postcss, css modules, masonry and<!-- /react-text --><br><!-- react-text: 104 -->some other magic stuff.<!-- /react-text --></em></p>
-                    <p>
-                      <!-- react-text: 106 -->Pretty neat, huh?
-                      <!-- /react-text --><br>
-                      <!-- react-text: 108 -->If you
-                      <!-- /react-text --><strong>fancy a chat</strong>
-                      <!-- react-text: 110 -->,
-                      <!-- /react-text --><br>
-                      <!-- react-text: 112 -->drop me a line at
-                      <!-- /react-text --><br><a href="mailto:info@fabianirsara.com?Subject=Cheers">info@fabianirsara.com</a></p>
-                    <p><strong><!-- react-text: 117 -->Stay bold <!-- /react-text --><!-- react-text: 118 -->&amp;<!-- /react-text --></strong></p>
+   <div data-reactroot="">
+   <!-- react-empty: 2 -->
+   <div class="style__line___3uTI5 style__left___3IRnd"></div>
+   <div class="style__line___3uTI5 style__top___1Dz7m"></div>
+   <div class="style__line___3uTI5 style__right___3Xggs"></div>
+   <div class="style__line___3uTI5 style__bottom___3EVve"></div>
+  
+   <div style="height: 721px;">
+      <div class="style__page___ZJiyd template-contact">
+         <!-- react-empty: 145 -->
+         <section class="main-wrapper style__main___1KuTD">
+            <div class="style__mainWrapper___2eAnb">
+               <div class="style__mainWrapperInner___3c8iz">
+                  <!-- react-empty: 149 -->
+                  <div>
+                     <section class="grid__container___3goUT grid__shortContainer___2zTyv">
+                        <div class="style__text___MsVYo">
+                           <h1>
+                              <!-- react-text: 154 -->CONTACT ME<!-- /react-text --><!-- react-text: 155 -->!<!-- /react-text -->
+                           </h1>
+                           <p>
+                              <strong>
+                                 <!-- react-text: 158 -->I<!-- /react-text --><!-- react-text: 159 -->'<!-- /react-text --><!-- react-text: 160 -->m available for freelance work.<!-- /react-text --><br><!-- react-text: 162 -->Drop me a line if you fancy a chat.<!-- /react-text -->
+                              </strong>
+                           </p>
+                           <p><a href="mailto:info@fabianirsara.com?Subject=Cheers">info@fabianirsara.com</a></p>
+                        </div>
+                     </section>
                   </div>
-                </section>
-              </div>
-              <footer class="style__footer___34BaK style__hasFooterLine___3pTkK">
-                <div class="grid__container___3goUT grid__shortContainer___2zTyv">
-                  <p class="style__text___1wrXB"><strong><!-- react-text: 123 -->Have <!-- /react-text --><span>an exquisite</span><!-- react-text: 125 --> <!-- /react-text --><!-- react-text: 126 -->Saturday<!-- /react-text --></strong></p>
-                  <nav
-                    class="style__links___282q6">
-                    <ul>
-                      <li><a target="_blank" href="http://github.com/firsara"><span class="style__linkText___1suf9" data-text="Github">Github</span></a></li>
-                      <li><a target="_blank" href="http://codepen.io/firsara"><span class="style__linkText___1suf9" data-text="Codepen">Codepen</span></a></li>
-                      <li><a target="_blank" href="http://500px.com/firsara"><span class="style__linkText___1suf9" data-text="500px">500px</span></a></li>
-                      <li><a target="_blank" href="http://twitter.com/firsara"><span class="style__linkText___1suf9" data-text="Twitter">Twitter</span></a></li>
-                      <li><a target="_blank" href="http://fabianirsara.com/blog"><span class="style__linkText___1suf9" data-text="Blog">Blog</span></a></li>
-                    </ul>
-                    </nav>
-                </div>
-              </footer>
+                  <footer class="style__footer___34BaK">
+                     <div class="grid__container___3goUT grid__shortContainer___2zTyv">
+                        <nav class="style__links___282q6">
+                           <ul>
+                              <li><a target="_blank" href="http://github.com/firsara"><span class="style__linkText___1suf9" data-text="Github">Github</span></a></li>
+                              <li><a target="_blank" href="http://codepen.io/firsara"><span class="style__linkText___1suf9" data-text="Codepen">Codepen</span></a></li>
+                              <li><a target="_blank" href="http://500px.com/firsara"><span class="style__linkText___1suf9" data-text="500px">500px</span></a></li>
+                              <li><a target="_blank" href="http://twitter.com/firsara"><span class="style__linkText___1suf9" data-text="Twitter">Twitter</span></a></li>
+                              <li><a target="_blank" href="http://fabianirsara.com/blog"><span class="style__linkText___1suf9" data-text="Blog">Blog</span></a></li>
+                           </ul>
+                        </nav>
+                     </div>
+                  </footer>
+               </div>
             </div>
-          </div>
-        </section>
+         </section>
       </div>
-    </div>
+   </div>
+</div>
+
   </div>
