--- a/src/app/component/skills/skills.html
+++ b/src/app/component/skills/skills.html
@@ -1,4 +1,4 @@
-<div id="about" class="page" style="top: 80px; display: block;"><div class="spacer"></div>
+<div id="about" class=""><div class="spacer"></div>
 		<div class="no-bg"></div>
 
 		<section class="column visible">
